--- a/Multiple_Linear_Regression.ipynb
+++ b/Multiple_Linear_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPiPnGBnvWazs4UBxrgCUy",
+      "authorship_tag": "ABX9TyPSHEH/gbkLPEOVSXaU+1dQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "AfK7u2KWybVt"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hVd5_mcEzc0y"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
