X and y variables defined

--- a/Multiple_Linear_Regression.ipynb
+++ b/Multiple_Linear_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxQiWlfjwAVnBRFrodxjAp",
+      "authorship_tag": "ABX9TyOoC0Lf7n1vOmOqmgzwX8ve",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -365,9 +365,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "X = dataset.iloc[:, :-1].values\n",
+        "y = dataset.iloc[:, 4].values"
+      ],
       "metadata": {
         "id": "idEmHxzKzyZ_"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UyBaRyzf0Y_q"
       },
       "execution_count": null,
       "outputs": []
