Libraries LabelEncoder and OneHotEncoder loaded

--- a/Multiple_Linear_Regression.ipynb
+++ b/Multiple_Linear_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoC0Lf7n1vOmOqmgzwX8ve",
+      "authorship_tag": "ABX9TyMCVbGmt9OctYz37z1r2p3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "AfK7u2KWybVt"
       },
@@ -36,7 +36,8 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder"
       ]
     },
     {
